--- a/configuration.properties
+++ b/configuration.properties
@@ -5,6 +5,10 @@ url_uat_techproed=https://www.uat-techproeducation-uat134lasd.com
 url_dev_techproed=https://www.dev-techproeducation-uat134lasd.com
 browser=chrome
 page_title=Techpro Education
-address_url=http://a.testaddressbook.com/sign_in
+#address_url=http://a.testaddressbook.com/sign_in
+address_url=https://bluerentalcar.com/
 address_username=testtechproed@gmail.com
 address_password=Test1234!
+app_url=https://www.bluerentalcars.com/
+app_customer_username=customer@bluerentalcars.com
+app_customer_password=12345
